# SBHacks12

./: 12labs.py  README.md  Recorder.py  claude_desktop_config.json  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
server/: 12labs.py  IdleScreenRec.py  __init__.py  claude_desktop_config.json  mcp_endpoints.py  server.py  test_gui.py  test_recorder.py  test_selection.py  twelvelabserver.py  video_engine.py
server/screenmanager/: ScreenManager.swift  build.sh  screenmanager  screenmanager.py
src/: extension.ts
