[project]
name = "sbhacks12"
version = "0.1.0"
description = "VS Code extension with pygls Python language server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.25.0",
    "mss>=10.1.0",
    "numpy>=2.4.1",
    "opencv-python>=4.11.0.86",
    "twelvelabs>=1.1.0",
    "pygls>=1.3.0",
    "lsprotocol>=2023.0.0",
]

[tool.uv.workspace]
members = [
    "mcp-server-demo",
]
[project.scripts]
sbhacks12-server = "server.server:main"
